Bug 444514 - Double Arrow Icon on Symbolic Links with Desktop Huge Icon Size
Summary: Double Arrow Icon on Symbolic Links with Desktop Huge Icon Size
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-28 00:47 UTC by serhumanos
Modified: 2021-10-28 17:55 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.3
Sentry Crash Report:


Attachments
screenshot overlay symbolic link arrow (352.21 KB, image/png)
2021-10-28 00:47 UTC, serhumanos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description serhumanos 2021-10-28 00:47:27 UTC
Created attachment 142956 [details]
screenshot overlay symbolic link arrow

SUMMARY


STEPS TO REPRODUCE
1. Set Desktop Icon Size to "Huge"
2. Create some Symbolic Link

OBSERVED RESULT
3. See double "symbolic link arrow"


EXPECTED RESULT
Only 1 symbolic link arrow


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 5.23 User Edition
KDE Plasma Version: 5.23.1
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Fushan Wen 2021-10-28 00:57:57 UTC
Can reproduce
Comment 2 Bug Janitor Service 2021-10-28 06:33:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/657
Comment 3 Nate Graham 2021-10-28 17:54:04 UTC
Git commit b28e7f23048092bc6a7e31b445055245165f742c by Nate Graham, on behalf of Fushan Wen.
Committed on 28/10/2021 at 17:53.
Pushed by ngraham into branch 'master'.

foldermodel: Drop overlay(s) to icons in plasma folder view

The overlay is already handled by KDirModel after https://invent.kde.org/frameworks/kio/-/commit/c88c4c65567ed089902848b58aa62cd6563dd933

M  +0    -1    containments/desktop/package/contents/ui/FolderItemDelegate.qml
M  +0    -4    containments/desktop/plugins/folder/foldermodel.cpp
M  +0    -1    containments/desktop/plugins/folder/foldermodel.h

https://invent.kde.org/plasma/plasma-desktop/commit/b28e7f23048092bc6a7e31b445055245165f742c
Comment 4 Nate Graham 2021-10-28 17:55:38 UTC
Git commit 7ccbdb322e0ba6ec47788da05009decace77999a by Nate Graham, on behalf of Fushan Wen.
Committed on 28/10/2021 at 17:55.
Pushed by ngraham into branch 'Plasma/5.23'.

foldermodel: Drop overlay(s) to icons in plasma folder view

The overlay is already handled by KDirModel after https://invent.kde.org/frameworks/kio/-/commit/c88c4c65567ed089902848b58aa62cd6563dd933


(cherry picked from commit b28e7f23048092bc6a7e31b445055245165f742c)

M  +0    -1    containments/desktop/package/contents/ui/FolderItemDelegate.qml
M  +0    -4    containments/desktop/plugins/folder/foldermodel.cpp
M  +0    -1    containments/desktop/plugins/folder/foldermodel.h

https://invent.kde.org/plasma/plasma-desktop/commit/7ccbdb322e0ba6ec47788da05009decace77999a