foldermodel: Drop overlay(s) to icons in plasma folder view

The overlay is already handled by KDirModel after https://invent.kde.org/frameworks/kio/-/commit/c88c4c65567ed089902848b58aa62cd6563dd933

BUG: 444514